--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -1,6 +1,6 @@
 key,de,en,comment
 ,,,
-app_confirm_form_leave_msg,"Diese Seite bittet Sie zu bestätigen, dass Sie die Seite verlassen möchten – Daten, die Sie eingegeben haben, werden unter Umständen nicht gespeichert.","Please confirm that you want to leave this page – entered data might not be saved!","NOTE: German version copied from Firefox default message"
+app_confirm_form_leave_msg,"Diese Seite bittet Sie zu bestätigen, dass Sie die Seite verlassen möchten – Daten, die Sie eingegeben haben, werden unter Umständen nicht gespeichert.","Please confirm that you want to leave this page – entered data might not be saved!","NOTE: German version copied from Firefox default message"
 app_notice_logged_out,Sie haben sich abgemeldet.,You have logged out.,
 app_warning_jsonly,"Diese Funktion erfordert JavaScript, aber es ist nicht aktiviert!","This feature needs Javascript, but it's not activated!",
 authentication_groups,Systemgruppen,System Groups,
@@ -72,19 +72,19 @@ external_groups,Abteilungsgruppen,Division groups,
 group_ask_delete_cancel,Abbrechen,Cancel,
 group_ask_delete_delete,Löschen,Delete,
 group_ask_delete_question_post, löschen?,?,
-group_ask_delete_question_pre,Möchten sie die Gruppe ,Would you like to delete group ,
-group_ask_delete_title,Gruppe Löschen,Delete Group,
+group_ask_delete_question_pre,Möchten sie die Arbeitsgruppe ,Would you like to delete work group ,
+group_ask_delete_title,Arbeitsgruppe Löschen,Delete Work Group,
 group_delete_confirm_msg,"Sind Sie sicher, dass Sie diese Arbeitsgruppe löschen wollen?",Are you sure you want to delete this work group?,
 group_edit_at_least_one_member_delete,löschen,löschen,
 group_edit_at_least_one_member_post,.,.,
-group_edit_at_least_one_member_pre,Eine Gruppe muss mindestens eine Person enthalten. Ganze Gruppe ,Eine Gruppe muss mindestens eine Person enthalten. Ganze Gruppe ,
+group_edit_at_least_one_member_pre,Eine Arbeitsgruppe muss mindestens eine Person enthalten. Ganze Arbeitsgruppe ,Eine Arbeitsgruppe muss mindestens eine Person enthalten. Ganze Arbeitsgruppe ,
 group_edit_btn,Bearbeiten,Edit,
 group_edit_cancel,Abbrechen,Cancel,
-group_edit_form_new_member_login_hint,Login des neuen Mitglieds dieser Gruppe,New group member login,
+group_edit_form_new_member_login_hint,Login des neuen Mitglieds dieser Arbeitsgruppe,New work group member login,
 group_edit_form_new_member_login_label,User hinzufügen,Add a member,
 group_edit_form_save_btn,Speichern,Save,
-group_edit_form_title_pre,Arbeitsgruppe bearbeiten: ,Edit Group: ,
-group_edit_hint_remove_yourself,Achtung: Sie entfernen sich selbst aus der Gruppe!,Achtung: Sie entfernen sich selbst aus der Gruppe!,
+group_edit_form_title_pre,Arbeitsgruppe bearbeiten: ,Edit Work Group: ,
+group_edit_hint_remove_yourself,Achtung: Sie entfernen sich selbst aus der Arbeitsgruppe!,Attention: You are about to remove yourself from teh work group!,
 group_edit_member,Mitglieder,Members,
 group_edit_name,Name,Name,
 group_edit_person,Person,Person,
@@ -95,7 +95,7 @@ group_meta_data_name,Name,Name,
 group_new_form_title,Neue Arbeitsgruppe erstellen,Create Group,
 group_new_group_btn,Neue Arbeitsgruppe,New Work Group,
 group_toolbar_header_entrusted_resources,Mir anvertraute Medieneinträge,Entrusted Media Entries,
-group_was_deleted,Gruppe wurde gelöscht.,Group has been deleted.,
+group_was_deleted,Arbeitsgruppe wurde gelöscht.,Work group has been deleted.,
 home_page_new_contents,Neue Inhalte,New Contents,
 internal_groups,Arbeitsgruppen,Work groups,
 login_box_author, ,,
@@ -183,15 +183,15 @@ meta_data_form_publish,Publizieren,Publish,
 meta_data_form_save,Speichern,Save,
 meta_data_form_submit_btn,Speichern,Submit,
 meta_data_header_text,Werte,Values,
-meta_data_input_new_bunch_add,Gruppe einfügen,Add Group,
+meta_data_input_new_bunch_add,Arbeitsgruppe einfügen,Add Work Group,
 meta_data_input_new_person_add,Person einfügen,Add Person,
-meta_data_input_new_person_toggle,Neue Person oder Gruppe einfügen,Add new Person or Group,
+meta_data_input_new_person_toggle,Neue Person oder Arbeitsgruppe einfügen,Add new Person or Work Group,
 meta_data_meta_key_label,Schlüssel,Key,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Value,
-no_content_fallback,(Keine Inhalte vorhanden.),(No content available.),
-no_groups_fallback,(Keine Gruppen vorhanden.),(No groups available.),
-no_keywords_fallback,(Keine Schlagworte vorhanden.),(No keywords available.),
+no_content_fallback,Keine Inhalte vorhanden.,No content available.,
+no_groups_fallback,Keine Arbeitsgruppen vorhanden.,No groups available.,
+no_keywords_fallback,Keine Schlagworte vorhanden.,No keywords available.,
 no_relations_title,Es wurden keine Zusammenhänge gefunden.,No relations found.,
 pagination_nav_loadnext,Mehr laden,Load more,
 pagination_nav_nextloading,Lädt…,Loading…,
@@ -215,7 +215,7 @@ permission_subject_title_users,Personen,Users,
 permissions_batch_success,Berechtigungen wurden erfolgreich aktualisiert.,Succesfully updated permissions.,
 permissions_batch_title_post, Inhalten, Resources,
 permissions_batch_title_pre,Zugriffsberechtigungen ändern von ,Edit Permissions of ,
-permissions_overview_yours_msg_end,", haben gegenwärtig als Person oder als Mitglied einer Gruppe folgende Berechtigungen",", currently have the following permissions (either directly or as a member of a group):",
+permissions_overview_yours_msg_end,", haben gegenwärtig als Person oder als Mitglied einer Arbeitsgruppe folgende Berechtigungen",", currently have the following permissions (either directly or as a member of a work group):",
 permissions_overview_yours_msg_start,"Sie, ","You, ",
 permissions_overview_yours_title,Ihre Berechtigungen,Your Permissions,
 permissions_responsible_user_msg,Die verantwortliche Person hat alle Berechtigungen zu den ausgewählten Inhalten und kann diese auch löschen.,The responsible user has all permissions for the selected content and can also delete it.,
@@ -231,9 +231,12 @@ relations_parents_title,Übergeordnete Sets,Parents,
 relations_siblings_title,Benachbarte Sets,Siblings,
 relations_title,Zusammenhänge,Relations,
 resource_action_destroy,Medieneintrag löschen,Delete media entry,
+resource_action_disfavor,Aus Favoriten entfernen,Remove from favorites,
+resource_action_edit_cover,Titelbild festlegen,Define cover,
+resource_action_edit_highlights,Inhalte hervorheben,Highlight contents,
 resource_action_edit,Editieren,Edit,
 resource_action_export,Exportieren,Download,
-resource_action_favor,Zu Favoriten hinzufügen/entfernen,Add to/Remove from favorites,
+resource_action_favor,Zu Favoriten hinzufügen,Add to favorites,
 resource_action_manage_collections,Zu Sets hinzufügen/Aus Sets entfernen,Add to/Remove from sets,
 resource_ask_delete_cancel,Abbrechen,Cancel,
 resource_ask_delete_ok,Löschen,Delete,
