feature: show edit sessions

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -267,6 +267,8 @@ resource_select_collection_save,Speichern,Save,
 resource_select_collection_search_placeholder,Suche,Search,
 resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
+resource_last_changes,Letzte Änderungen,Last Changes,
+resource_last_changes_empty,Es wurden noch keine Änderungen festgehalten.,No changes recorded yet.,
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
 resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
 resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit MetaData,
