fix: sort by title only ascending

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -65,9 +65,9 @@ collection_was_disfavored,Das Set wurde von den Favoriten entfernt.,Set was remo
 collection_was_favored,Das Set wurde zu den Favoriten hinzugefügt.,Set was added to favorites.,
 collection_layout_save,Darstellung festlegen,Save layout,
 collection_layout_saved,Darstellung gespeichert,Layout saved,
-collection_sorting_created_at_asc,Sortieren nach Erstelldatum aufsteigend,Sortieren nach Erstelldatum aufsteigend,
-collection_sorting_created_at_desc,Sortieren nach Erstelldatum absteigend,Sortieren nach Erstelldatum absteigend,
-collection_sorting_title_asc,Sortieren nach Titel aufsteigend,Sortieren nach Titel aufsteigend,
+collection_sorting_created_at_asc,Sortieren nach Importierdatum aufsteigend,Sortieren nach Importierdatum aufsteigend,
+collection_sorting_created_at_desc,Sortieren nach Importierdatum absteigend,Sortieren nach Importierdatum absteigend,
+collection_sorting_title_asc,Sortieren nach Titel alphabetisch,Sortieren nach Titel alphabetisch,
 collection_sorting_title_desc,Sortieren nach Titel absteigend,Sortieren nach Titel absteigend,
 dashboard_create_collection_btn,Set erstellen,Create Set,
 dashboard_create_collection,Set erstellen,Create set,
