feat: ui: forms: Input TextDate

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -189,6 +189,13 @@ meta_data_header_text,Werte,Values,
 meta_data_input_new_group_add,Arbeitsgruppe einfügen,Add Work Group,
 meta_data_input_new_person_add,Person einfügen,Add Person,
 meta_data_input_new_person_toggle,Neue Person oder Arbeitsgruppe einfügen,Add new Person or Work Group,
+meta_data_input_date_type_text,Freie Eingabe,Free-text entry,
+meta_data_input_date_placeholder_text,Freie Eingabe,Free-text entry,
+meta_data_input_date_type_timestamp,am,on,
+meta_data_input_date_placeholder_timestamp,wird als Text gespeichert,on,
+meta_data_input_date_type_duration,von/bis,from/to,
+meta_data_input_date_placeholder_duration_from,von,from,
+meta_data_input_date_placeholder_duration_to,bis,to,
 meta_data_meta_key_label,Schlüssel,Key,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Value,
