feat: views: Vocabulary
- index lists all Vocabularies visible for User
- show lists all MetaKeys for a Vocabulary

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -306,6 +306,7 @@ sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
 sitemap_my_unpublished,Meine Entwürfe,My drafts,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
+sitemap_vocabularies,Vokabulare,Vocabularies,
 usage_terms_accept_btn,Nutzungsbedingungen akzeptieren,Accept usage terms,
 usage_terms_reject_btn,Ablehnen,Reject usage terms,
 user_menu_admin_ui,Admin-Interface öffnen,Open Admin Interface,
