display progress of processed files with Zencoder

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -118,6 +118,8 @@ media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgenden Medieni
 media_entry_ask_delete_title,Medieneintrag löschen,Delete Media Entry,
 media_entry_back_btn,Zurück,Back,
 media_entry_conversion_hint,"Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.","Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.",
+media_entry_conversion_progress_post,"% abgeschlossen.","%",
+media_entry_conversion_progress_pre,"Konvertierung zu ","Conversion completed at ",
 media_entry_conversion_reload,"Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.","Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.",
 media_entry_conversion_status_failed,Die Konvertierung ist fehlgeschlagen. Bitte wenden Sie sich an den Support.,The video conversion failed. Please contact support.,
 media_entry_conversion_status_initialized,Die Konvertierung läuft. Bitte versuchen Sie es später noch einmal.,The media file is converting. Please try later.,
