feat: ui: AutoComplete: style existing values

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -202,6 +202,7 @@ meta_data_input_date_type_timestamp,am,on,
 meta_data_input_new_group_add,Arbeitsgruppe einfügen,Add Work Group,
 meta_data_input_new_person_add,Person einfügen,Add Person,
 meta_data_input_new_person_toggle,Neue Person oder Arbeitsgruppe einfügen,Add new Person or Work Group,
+meta_data_input_keywords_existing,Schlagwort ist bereits vergeben!,Keyword already set!,
 meta_data_meta_key_label,Schlüssel,Key,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Value,
