fix: i18n: "imports" -> "drafts"

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -143,7 +143,7 @@ media_entry_file_format_not_supported_1,"Your browser does most likely not suppo
 media_entry_file_format_not_supported_2,download the file,download the file,
 media_entry_file_format_not_supported_3,.,.,
 media_entry_file_information_title,Datei,File Information,
-media_entry_media_import_gotodrafts,Gehe zu aktuellen Importen,Go to Current Imports,
+media_entry_media_import_gotodrafts,Gehe zu Entwürfen,Go to Drafts,
 media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
 media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drag & drop files here or,
