feature: collection batch meta data edit

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -173,10 +173,13 @@ meta_data_batch_items_selected,Medieneinträge selektiert,media entries selected
 meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Succesfully updated metadata.,
 meta_data_batch_summary_all_post, Medieneinträge wurden gespeichert., media entries have been saved.,
 meta_data_batch_summary_all_pre,Alle ,All ,
+meta_data_collection_batch_summary_all_post, Sets wurden gespeichert., sets have been saved.,
+meta_data_collection_batch_summary_all_pre,Alle ,All ,
 meta_data_batch_summary_missing, haben fehlende Angaben, have missing metadata,
 meta_data_batch_summary_published, haben ausgefüllte Pflichtfelder, have mandatory data,
 meta_data_batch_summary_were_published, hatten bereits ausgefüllte Pflichtfelder, already had mandatory data,
-meta_data_batch_title_post, Medieneinträge gleichzeitig editieren, media entries at once,
+meta_data_batch_title_post_media_entries, Medieneinträge gleichzeitig editieren, media entries at once,
+meta_data_batch_title_post_collections, Sets gleichzeitig editieren, sets at once,
 meta_data_batch_title_pre,Metadaten für ,Edit metadata for ,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_post,!,!,
@@ -282,8 +285,10 @@ resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
 resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
-resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit MetaData,
-resources_box_batch_actions_managepermissions,Berechtigungen editieren,Edit Permissions,
+resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit Meta Data for media entries,
+resources_box_batch_actions_edit_sets,Metadaten von Sets editieren,Edit MetaData for sets,
+resources_box_batch_actions_managepermissions,Berechtigungen von Medieneinträgen editieren,Edit Permissions for media entries,
+resources_box_batch_actions_sets_managepermissions,Berechtigungen von Sets editieren,Edit Permissions for collections,
 resources_box_batch_actions_menu_title,Aktionen,Actions,
 resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_batch_actions_save,Als Filterset speichern,Save as filter set,
