feature: add relations pages for parents and siblings to media entries too

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -45,9 +45,10 @@ collection_new_header,Neues Set,Create Set,
 collection_new_label_title,Titel,Title,
 collection_permissions_btn,Zugriffsberechtigungen ändern,Change Permissions,
 collection_relations_child_sets,Untergeordnete Sets,Child sets,
-collection_relations_current_media_entry,Aktueller Eintrag,Current entry,
-collection_relations_current_set,Aktuelles Set,Current set,
+media_entry_relations_current,Aktueller Eintrag,Current entry,
+collection_relations_current,Aktuelles Set,Current set,
 collection_relations_hint_text,"Das ausgewählte Set ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet, benachbart oder untergeordnet. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.","Das ausgewählte Set ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet, benachbart oder untergeordnet. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.",
+media_entry_relations_hint_text,"Der ausgewählte Medieneintrag ist mit Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet oder benachbart. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.","Der ausgewählte Medieneintrag ist mit Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet oder benachbart. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.",
 collection_relations_no_child_sets, , ,
 collection_relations_no_parent_sets, , ,
 collection_relations_no_sibling_sets, , ,
