feat: admin-mode/uberadmin
- simple but obvious styles (without blinking)
- checked all cases where we do `skip_auth…`
- previously checked that any auth that involves the current user is handled via pundit
- added custom implementation of `authorize` and `policy` methods that transparently handle uberadmin mode
- reflect uberadmin_mode in current_user.admin instance var

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -329,6 +329,8 @@ sitemap_search,Suche,Search,
 sitemap_vocabularies,Vokabulare,Vocabularies,
 usage_terms_accept_btn,Nutzungsbedingungen akzeptieren,Accept usage terms,
 usage_terms_reject_btn,Ablehnen,Reject usage terms,
+user_menu_admin_mode_toogle_on,In Admin-Modus wechseln,Switch to Admin-Mode,
+user_menu_admin_mode_toogle_off,Admin-Modus beenden,Stop Admin-Mode,
 user_menu_admin_ui,Admin-Interface öffnen,Open Admin Interface,
 user_menu_login_btn,Anmelden,Log in,
 user_menu_logout_btn,Abmelden,Log out,
