feature: add hint texts to relations page

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -56,6 +56,9 @@ collection_relations_parent_sets,Übergeordnete Sets,Parent sets,
 collection_relations_show_all_relations,Alle Zusammenhänge anzeigen,Show all relations,
 collection_relations_show_all,Alle anzeigen,Show all,
 collection_relations_sibling_sets,Benachbarte Sets,Sibling sets,
+collection_relations_parents_hint,Das ausgewählte Set wurde diesen Sets hinzugefügt.,Das ausgewählte Set wurde diesen Sets hinzugefügt.,
+collection_relations_siblings_hint,Diese Sets wurden den gleichen Sets hinzugefügt, wie das ausgewählte Set.,Diese Sets wurden den gleichen Sets hinzugefügt, wie das ausgewählte Set.,
+collection_relations_children_hint,Diese Sets wurden dem ausgewählten Set hinzugefügt.,Diese Sets wurden dem ausgewählten Set hinzugefügt.,
 collection_resource_selection_cancel,Abbrechen,Cancel,
 collection_resource_selection_h_author,Autor/in,Author,
 collection_resource_selection_h_date,Datierung,Dating,
