feature: vocabulary contents

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -336,6 +336,9 @@ vocabularies_keywords_hint_1,Alle im Vokabular ,Alle im Vokabular ,
 vocabularies_keywords_hint_2, enthaltenen MetaKeys vom Typ Keyword mit den enthaltenen Schlagwörtern., enthaltenen MetaKeys vom Typ Keyword mit den enthaltenen Schlagwörtern.,
 vocabularies_tabs_keywords,Schlagwörter,Keywords,
 vocabularies_tabs_vocabulary,Vokabular,Vocabulary,
+vocabularies_tabs_contents,Inhalte,Contents,
+vocabularies_contents_hint_1,"Alle Einträge, welche Medadaten haben die im Vokabular ","Alle Einträge, welche Medadaten haben die im Vokabular ",
+vocabularies_contents_hint_2," definiert sind."," definiert sind.",
 workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View contents of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
