--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -57,8 +57,10 @@ collection_relations_show_all_relations,Alle Zusammenhänge anzeigen,Show all re
 collection_relations_show_all,Alle anzeigen,Show all,
 collection_relations_sibling_sets,Benachbarte Sets,Sibling sets,
 collection_relations_parents_hint,"Das ausgewählte Set wurde diesen Sets hinzugefügt.","Das ausgewählte Set wurde diesen Sets hinzugefügt.",
-collection_relations_siblings_hint,"Diese Sets wurden den gleichen Sets hinzugefügt, wie das ausgewählte Set.","Diese Sets wurden den gleichen Sets hinzugefügt, wie das ausgewählte Set.",
+collection_relations_siblings_hint,"Diese Sets wurden den gleichen Sets hinzugefügt wie das ausgewählte Set.","Diese Sets wurden den gleichen Sets hinzugefügt wie das ausgewählte Set.",
 collection_relations_children_hint,"Diese Sets wurden dem ausgewählten Set hinzugefügt.","Diese Sets wurden dem ausgewählten Set hinzugefügt.",
+media_entry_relations_parents_hint,"Der ausgewählte Eintrag wurde diesen Sets hinzugefügt.","Der ausgewählte Eintrag wurde diesen Sets hinzugefügt.",
+media_entry_relations_siblings_hint,"Diese Sets wurden den gleichen Sets hinzugefügt wie der ausgewählte Eintrag.","Diese Sets wurden den gleichen Sets hinzugefügt wie der ausgewählte Eintrag.",
 collection_resource_selection_cancel,Abbrechen,Cancel,
 collection_resource_selection_h_author,Autor/in,Author,
 collection_resource_selection_h_date,Datierung,Dating,
