fix: hint texts for vocabulary keywords and contents

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -335,12 +335,12 @@ user_menu_logout_btn,Abmelden,Log out,
 user_menu_upload,Medien importieren,Upload Media,
 vocabularies_all,Alle Vokabulare,All Vocabularies,
 vocabularies_keywords_hint_1,Alle im Vokabular ,Alle im Vokabular ,
-vocabularies_keywords_hint_2, enthaltenen MetaKeys vom Typ Keyword mit den enthaltenen Schlagwörtern., enthaltenen MetaKeys vom Typ Keyword mit den enthaltenen Schlagwörtern.,
+vocabularies_keywords_hint_2, enthaltenen Schlagwörter und die dazugehörenden Metadatenfelder., enthaltenen Schlagwörter und die dazugehörenden Metadatenfelder.,
 vocabularies_tabs_keywords,Schlagwörter,Keywords,
 vocabularies_tabs_vocabulary,Vokabular,Vocabulary,
 vocabularies_tabs_contents,Inhalte,Contents,
-vocabularies_contents_hint_1,"Alle Einträge, welche Medadaten haben die im Vokabular ","Alle Einträge, welche Medadaten haben die im Vokabular ",
-vocabularies_contents_hint_2," definiert sind."," definiert sind.",
+vocabularies_contents_hint_1,"Alle Inhalte mit Metadaten des Vokabulars ","Alle Inhalte mit Metadaten des Vokabulars ",
+vocabularies_contents_hint_2,". Sie sehen nur Inhalte, für die Sie berechtigt sind.",". Sie sehen nur Inhalte, für die Sie berechtigt sind.",
 workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View contents of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
