--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -263,6 +263,7 @@ resource_action_destroy,Medieneintrag löschen,Delete media entry,
 resource_action_disfavor,Aus Favoriten entfernen,Remove from favorites,
 resource_action_edit_cover,Titelbild festlegen,Define cover,
 resource_action_edit_highlights,Inhalte hervorheben,Highlight contents,
+resource_action_edit_custom_urls,Sprechende Adressesn,Sprechende Adressen,
 resource_action_edit,Editieren,Edit,
 resource_action_export,Exportieren,Download,
 resource_action_favor,Zu Favoriten hinzufügen,Add to favorites,
@@ -349,3 +350,40 @@ workgroup_members_table_is_member,Mitglied?,Member?,
 workgroup_members_table_login,Login,Login,
 workgroup_members_table_title,Mitglieder,Members,
 release_info,Release Info,Release Info,
+custom_urls_title,Adressen für ,Adressen für ,
+custom_urls_new,Adresse anlegen / übertragen,Adresse anlegen / übertragen,
+custom_urls_primary_title,Primäre Adresse,Primäre Adresse,
+custom_urls_primary_hint,"Für jeden Inhalt gibt es immer genau eine primäre Adresse. Diese ist in der Adressleiste des Browsers sichtbar wenn der Inhalt angezeigt wird. Neben der primären Adresse können weitere gesetzt werden, die auf die primäre Adresse weiterleiten.","Für jeden Inhalt gibt es immer genau eine primäre Adresse. Diese ist in der Adressleiste des Browsers sichtbar wenn der Inhalt angezeigt wird. Neben der primären Adresse können weitere gesetzt werden, die auf die primäre Adresse weiterleiten.",
+custom_urls_canonical_title,Kanonische Adresse (UUID),Kanonische Adresse (UUID),
+custom_urls_canonical_hint,"Jeder Inhalt hat eine automatisch erzeugte, kanonische Adresse bestehend aus Zahlen und Buchstaben, eine sog. UUID (Universally Unique Identifier). Diese Adresse kann nicht übertragen oder entfernt werden und ist deshalb immer an erster Stelle aufgelistet.","Jeder Inhalt hat eine automatisch erzeugte, kanonische Adresse bestehend aus Zahlen und Buchstaben, eine sog. UUID (Universally Unique Identifier). Diese Adresse kann nicht übertragen oder entfernt werden und ist deshalb immer an erster Stelle aufgelistet.",
+custom_urls_manage_address_title,Adressverwaltung,Adressverwaltung,
+custom_urls_table_header_address,Adresse,Adresse,
+custom_urls_table_header_date,Datum,Datum,
+custom_urls_table_header_created_by,erstellt durch,erstellt durch,
+custom_urls_table_header_type,Typ,Typ,
+custom_urls_table_header_actions,Aktionen,Aktionen,
+custom_urls_no_addresses_defined,Noch keine Adressen definiert,Noch keine Adressen definiert,
+edit_custom_urls_title,Anforderungen,Anforderungen,
+edit_custom_urls_requirements_title,Anforderungen,Anforderungen,
+edit_custom_urls_requirements_hint,"Eine Adresse darf nur genau einmal im System vorkommen. Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen aus Kleinbuchstaben, Nummern, Bindestrichen ( - ) und Grundstrichen ( _ ) in beliebiger Reihenfolge.","Eine Adresse darf nur genau einmal im System vorkommen. Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen aus Kleinbuchstaben, Nummern, Bindestrichen ( - ) und Grundstrichen ( _ ) in beliebiger Reihenfolge.",
+edit_custom_urls_transfer_title,Übertragen,Übertragen,
+edit_custom_urls_transfer_hint,"Eine bereits bestehende Adresse kann auf diesen Inhalt übertragen werden, indem sie hier eingegeben wird. Dazu müssen Sie für beide Inhalte über die Zugriffsberechtigung 'Verwalten' verfügen!","Eine bereits bestehende Adresse kann auf diesen Inhalt übertragen werden, indem sie hier eingegeben wird. Dazu müssen Sie für beide Inhalte über die Zugriffsberechtigung 'Verwalten' verfügen!",
+edit_custom_urls_preferred_address,Gewünschte Adresse:,Gewünschte Adresse:,
+edit_custom_urls_cancel,Abbrechen,Abbrechen,
+edit_custom_urls_create_or_transfer,Adresse anlegen / übertragen,Adresse anlegen / übertragen,
+edit_custom_urls_set_primary,Als primäre Adresse setzen,Als primäre Adresse setzen,
+edit_custom_urls_state_transfer,Weiterleitung,Weiterleitung,
+edit_custom_urls_state_primary,Primäre Adresse,Primäre Adresse,
+edit_custom_urls_back,Zurück,Zurück,
+custom_urls_flash_empty,Adresse darf nicht leer sein,Adresse darf nicht leer sein,
+custom_urls_flash_wrong_format_1,Adresse ,Adresse ,
+custom_urls_flash_wrong_format_2, erfüllt die Anforderungen nicht, erfüllt die Anforderungen nicht,
+custom_urls_flash_exists_1,Adresse ,Adresse ,
+custom_urls_flash_exists_2, existiert bereits, existiert bereits,
+custom_urls_flash_create_successful_1,Adresse ,Adresse ,
+custom_urls_flash_create_successful_2, wurde erstellt, wurde erstellt,
+custom_urls_flash_transfer_successful_1,Adresse ,Adresse ,
+custom_urls_flash_transfer_successful_2, wurde transferiert von , wurde transferiert von ,
+custom_urls_flash_transfer_successful_3, nach , nach ,
+custom_urls_flash_primary_url_set_1,Primäre Adresse ,Primäre Adresse ,
+custom_urls_flash_primary_url_set_2, wurde gesetzt, wurde gesetzt,
