feature: add confirmation dialog to custom urls transfer and adjust flash messages

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -353,7 +353,7 @@ release_info,Release Info,Release Info,
 custom_urls_title,Adressen für ,Adressen für ,
 custom_urls_new,Adresse anlegen / übertragen,Adresse anlegen / übertragen,
 custom_urls_primary_title,Primäre Adresse,Primäre Adresse,
-custom_urls_primary_hint,"Für jeden Inhalt gibt es immer genau eine primäre Adresse. Diese ist in der Adressleiste des Browsers sichtbar wenn der Inhalt angezeigt wird. Neben der primären Adresse können weitere gesetzt werden, die auf die primäre Adresse weiterleiten.","Für jeden Inhalt gibt es immer genau eine primäre Adresse. Diese ist in der Adressleiste des Browsers sichtbar wenn der Inhalt angezeigt wird. Neben der primären Adresse können weitere gesetzt werden, die auf die primäre Adresse weiterleiten.",
+custom_urls_primary_hint,"Für jeden Inhalt (egal ob Medieneintrag oder Set) gibt es immer genau eine primäre Adresse. Diese ist in der Adressleiste des Browsers sichtbar, wenn der Inhalt angezeigt wird. Neben der primären Adresse können weitere gesetzt werden, die auf die primäre Adresse weiterleiten.","Für jeden Inhalt (egal ob Medieneintrag oder Set) gibt es immer genau eine primäre Adresse. Diese ist in der Adressleiste des Browsers sichtbar, wenn der Inhalt angezeigt wird. Neben der primären Adresse können weitere gesetzt werden, die auf die primäre Adresse weiterleiten.",
 custom_urls_canonical_title,Kanonische Adresse (UUID),Kanonische Adresse (UUID),
 custom_urls_canonical_hint,"Jeder Inhalt hat eine automatisch erzeugte, kanonische Adresse bestehend aus Zahlen und Buchstaben, eine sog. UUID (Universally Unique Identifier). Diese Adresse kann nicht übertragen oder entfernt werden und ist deshalb immer an erster Stelle aufgelistet.","Jeder Inhalt hat eine automatisch erzeugte, kanonische Adresse bestehend aus Zahlen und Buchstaben, eine sog. UUID (Universally Unique Identifier). Diese Adresse kann nicht übertragen oder entfernt werden und ist deshalb immer an erster Stelle aufgelistet.",
 custom_urls_manage_address_title,Adressverwaltung,Adressverwaltung,
@@ -365,25 +365,49 @@ custom_urls_table_header_actions,Aktionen,Aktionen,
 custom_urls_no_addresses_defined,Noch keine Adressen definiert,Noch keine Adressen definiert,
 edit_custom_urls_title,Anforderungen,Anforderungen,
 edit_custom_urls_requirements_title,Anforderungen,Anforderungen,
-edit_custom_urls_requirements_hint,"Eine Adresse darf nur genau einmal im System vorkommen. Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen aus Kleinbuchstaben, Nummern, Bindestrichen ( - ) und Grundstrichen ( _ ) in beliebiger Reihenfolge.","Eine Adresse darf nur genau einmal im System vorkommen. Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen aus Kleinbuchstaben, Nummern, Bindestrichen ( - ) und Grundstrichen ( _ ) in beliebiger Reihenfolge.",
+edit_custom_urls_requirements_hint,"Eine Adresse darf nur genau einmal im System vorkommen – entweder für einen Medieneintrag oder für ein Set. Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen aus Kleinbuchstaben, Nummern, Bindestrichen ( - ) und Grundstrichen ( _ ) in beliebiger Reihenfolge.","Eine Adresse darf nur genau einmal im System vorkommen – entweder für einen Medieneintrag oder für ein Set. Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen aus Kleinbuchstaben, Nummern, Bindestrichen ( - ) und Grundstrichen ( _ ) in beliebiger Reihenfolge.",
 edit_custom_urls_transfer_title,Übertragen,Übertragen,
-edit_custom_urls_transfer_hint,"Eine bereits bestehende Adresse kann auf diesen Inhalt übertragen werden, indem sie hier eingegeben wird. Dazu müssen Sie für beide Inhalte über die Zugriffsberechtigung 'Verwalten' verfügen!","Eine bereits bestehende Adresse kann auf diesen Inhalt übertragen werden, indem sie hier eingegeben wird. Dazu müssen Sie für beide Inhalte über die Zugriffsberechtigung 'Verwalten' verfügen!",
+edit_custom_urls_transfer_hint,"Eine bereits bestehende Adresse kann von einem Medieneintrag auf einen anderen oder von einem Set auf ein anderes übertragen werden. Bestehende Adressen können nicht von einem Medieneintrag auf ein Set und umgekehrt übertragen werden. Wollen Sie eine Adresse übertragen, dann geben Sie diese hier ein. Sie müssen für beide Inhalte über die Zugriffsberechtigung 'Verwalten' verfügen.","Eine bereits bestehende Adresse kann von einem Medieneintrag auf einen anderen oder von einem Set auf ein anderes übertragen werden. Bestehende Adressen können nicht von einem Medieneintrag auf ein Set und umgekehrt übertragen werden. Wollen Sie eine Adresse übertragen, dann geben Sie diese hier ein. Sie müssen für beide Inhalte über die Zugriffsberechtigung 'Verwalten' verfügen.",
 edit_custom_urls_preferred_address,Gewünschte Adresse:,Gewünschte Adresse:,
 edit_custom_urls_cancel,Abbrechen,Abbrechen,
+edit_custom_urls_transfer,Übertragen,Übertragen,
+edit_custom_urls_confirmation,Bestätigung,Bestätigung,
 edit_custom_urls_create_or_transfer,Adresse anlegen / übertragen,Adresse anlegen / übertragen,
 edit_custom_urls_set_primary,Als primäre Adresse setzen,Als primäre Adresse setzen,
 edit_custom_urls_state_transfer,Weiterleitung,Weiterleitung,
 edit_custom_urls_state_primary,Primäre Adresse,Primäre Adresse,
-edit_custom_urls_back,Zurück,Zurück,
-custom_urls_flash_empty,Adresse darf nicht leer sein,Adresse darf nicht leer sein,
-custom_urls_flash_wrong_format_1,Adresse ,Adresse ,
-custom_urls_flash_wrong_format_2, erfüllt die Anforderungen nicht, erfüllt die Anforderungen nicht,
-custom_urls_flash_exists_1,Adresse ,Adresse ,
-custom_urls_flash_exists_2, existiert bereits, existiert bereits,
-custom_urls_flash_create_successful_1,Adresse ,Adresse ,
-custom_urls_flash_create_successful_2, wurde erstellt, wurde erstellt,
-custom_urls_flash_transfer_successful_1,Adresse ,Adresse ,
-custom_urls_flash_transfer_successful_2, wurde transferiert von , wurde transferiert von ,
-custom_urls_flash_transfer_successful_3, nach , nach ,
-custom_urls_flash_primary_url_set_1,Primäre Adresse ,Primäre Adresse ,
-custom_urls_flash_primary_url_set_2, wurde gesetzt, wurde gesetzt,
+edit_custom_urls_back_to_media_entry,Zurück zum Medieneintrag,Zurück zum Medieneintrag,
+edit_custom_urls_back_to_collection,Zurück zum Set,Zurück zum Set,
+custom_urls_flash_empty,Adresse darf nicht leer sein.,Adresse darf nicht leer sein.,
+custom_urls_flash_wrong_format_1,"Adresse ","Adresse ",
+custom_urls_flash_wrong_format_2," erfüllt die Anforderungen nicht."," erfüllt die Anforderungen nicht.",
+custom_urls_flash_exists_on_itself_media_entry_1,"Adresse ","Adresse ",
+custom_urls_flash_exists_on_itself_media_entry_2," existiert bereits für diesen Medieneintrag."," existiert bereits für diesen Medieneintrag.",
+custom_urls_flash_exists_on_itself_collection_1,"Adresse ","Adresse ",
+custom_urls_flash_exists_on_itself_collection_2," existiert bereits für dieses Set."," existiert bereits für dieses Set.",
+custom_urls_flash_not_allowed_media_entry_1,"Die Adresse ","Die Adresse ",
+custom_urls_flash_not_allowed_media_entry_2," kann nicht übertragen werden. Sie haben nicht die Berechtigung den Medieneintrag zu verwalten, auf welchen die Adresse "," kann nicht übertragen werden. Sie haben nicht die Berechtigung den Medieneintrag zu verwalten, auf welchen die Adresse ",
+custom_urls_flash_not_allowed_media_entry_3," im Moment verweist."," im Moment verweist.",
+custom_urls_flash_not_allowed_collection_1,"Die Adresse ","Die Adresse ",
+custom_urls_flash_not_allowed_collection_2," kann nicht übertragen werden. Sie haben nicht die Berechtigung das Set zu verwalten, auf welches die Adresse "," kann nicht übertragen werden. Sie haben nicht die Berechtigung das Set zu verwalten, auf welches die Adresse ",
+custom_urls_flash_not_allowed_collection_3," im Moment verweist."," im Moment verweist.",
+custom_urls_flash_not_same_type_media_entry_1,"Adresse ","Adresse ",
+custom_urls_flash_not_same_type_media_entry_2," kann nicht übertragen werden. Adressen von Sets können nicht auf Medieneinträge übertragen werden."," kann nicht übertragen werden. Adressen von Sets können nicht auf Medieneinträge übertragen werden.",
+custom_urls_flash_not_same_type_collection_1,"Adresse ","Adresse ",
+custom_urls_flash_not_same_type_collection_2," kann nicht übertragen werden. Adressen von Medieneinträgen können nicht auf Sets übertragen werden."," kann nicht übertragen werden. Adressen von Medieneinträgen können nicht auf Sets übertragen werden.",
+custom_urls_flash_create_successful_1,"Adresse ","Adresse ",
+custom_urls_flash_create_successful_2," wurde erstellt."," wurde erstellt.",
+custom_urls_flash_transfer_successful_1,"Adresse ","Adresse ",
+custom_urls_flash_transfer_successful_2," wurde von "," wurde von ",
+custom_urls_flash_transfer_successful_3," auf "," auf ",
+custom_urls_flash_transfer_successful_4," übertragen."," übertragen.",
+custom_urls_flash_transfer_confirmation_collection_1,"Die Adresse ","Die Adresse ",
+custom_urls_flash_transfer_confirmation_collection_2," ist gegenwärtig dem Set "," ist gegenwärtig dem Set ",
+custom_urls_flash_transfer_confirmation_collection_3," zugewiesen. Wollen Sie diese Adresse auf das Set "," zugewiesen. Wollen Sie diese Adresse auf das Set ",
+custom_urls_flash_transfer_confirmation_collection_4," übertragen?"," übertragen?",
+custom_urls_flash_transfer_confirmation_media_entry_1,"Die Adresse ","Die Adresse ",
+custom_urls_flash_transfer_confirmation_media_entry_2," ist gegenwärtig dem Medieneintrag "," ist gegenwärtig dem Medieneintrag ",
+custom_urls_flash_transfer_confirmation_media_entry_3," zugewiesen. Wollen Sie diese Adresse auf den Medieneintrag "," zugewiesen. Wollen Sie diese Adresse auf den Medieneintrag ",
+custom_urls_flash_transfer_confirmation_media_entry_4," übertragen?"," übertragen?",
+custom_urls_flash_primary_url_set_1,,,
+custom_urls_flash_primary_url_set_2," wurde als Primäre Adresse gesetzt."," wurde als Primäre Adresse gesetzt.",
