fix: meta data edit tests

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -202,6 +202,7 @@ meta_data_form_cancel,Abbrechen,Cancel,
 meta_data_form_publish,Publizieren,Publish,
 meta_data_form_save,Speichern,Save,
 meta_data_form_submit_btn,Speichern,Submit,
+meta_data_form_all_data,Alle Daten,Alle Daten,
 meta_data_header_text,Werte,Values,
 meta_data_input_date_placeholder_duration_from,von,from,
 meta_data_input_date_placeholder_duration_to,bis,to,
